styled header and part of hero section

--- a/index.html
+++ b/index.html
@@ -4,14 +4,28 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Landing Page</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
+      integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css"
+      integrity="sha512-NmLkDIU1C/C88wi324HBc+S2kLhi08PN5GDeUVVVC/BVt/9Izdsc9SVeVfA1UZbY3sHUlDSyRXhCzHfr6hmPPw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <main>
       <header class="container">
-        <h1>Header Logo</h1>
+        <h1 class="header-logo">Header Logo</h1>
         <nav>
-          <ul>
+          <ul class="nav-list">
             <li>
               <a href="#">header link one</a>
             </li>
@@ -24,7 +38,7 @@
           </ul>
         </nav>
       </header>
-      <section id="hero" class="hero">
+      <section id="hero" class="hero container">
         <div class="description">
           <h1>This website is awesome</h1>
           <p>
