added HTML for cards section

--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <!-- Main section -->
     <main>
+      <!-- Header -->
       <header class="container">
         <h1 class="header-logo">Header Logo</h1>
         <nav>
@@ -38,6 +40,7 @@
           </ul>
         </nav>
       </header>
+      <!-- Hero -->
       <section id="hero" class="hero container">
         <div class="description">
           <h1>This website is awesome</h1>
@@ -48,9 +51,50 @@
           <button class="btn">Sign up</button>
         </div>
         <div class="hero-image">
-          <img src="https://placehold.co/900x400" alt="" />
+          <img
+            src="https://placehold.co/900x400"
+            alt="placeholder image for hero section"
+          />
         </div>
       </section>
     </main>
+
+    <!-- Card list -->
+
+    <section id="cards" class="cards">
+      <div class="section-heading">
+        <h2>Some random information.</h2>
+      </div>
+      <div class="cards">
+        <div class="card">
+          <img
+            src="https://placehold.co/150x150"
+            alt="placeholder image for card"
+          />
+          <p>this is some subtext under an illustration or image</p>
+        </div>
+        <div class="card">
+          <img
+            src="https://placehold.co/150x150"
+            alt="placeholder image for card"
+          />
+          <p>this is some subtext under an illustration or image</p>
+        </div>
+        <div class="card">
+          <img
+            src="https://placehold.co/150x150"
+            alt="placeholder image for card"
+          />
+          <p>this is some subtext under an illustration or image</p>
+        </div>
+        <div class="card">
+          <img
+            src="https://placehold.co/150x150"
+            alt="placeholder image for card"
+          />
+          <p>this is some subtext under an illustration or image</p>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
