finished cards list section

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       <div class="section-heading">
         <h2>Some random information.</h2>
       </div>
-      <div class="cards">
+      <div class="cards-list container">
         <div class="card">
           <img
             src="https://placehold.co/150x150"
