--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Landing Page</title>
+    <!-- Font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
@@ -11,6 +18,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <!-- css reset -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css"
@@ -18,6 +26,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <!-- custom css -->
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -93,6 +102,39 @@
             alt="placeholder image for card"
           />
           <p>this is some subtext under an illustration or image</p>
+        </div>
+      </div>
+    </section>
+
+    <!-- Quote -->
+
+    <section id="quote" class="quote">
+      <div class="container container-sm">
+        <div class="quote-text">
+          <p>
+            This is an inspiring quote, or a testimonial from a customer. Maybe
+            it's just filling up space, or maybe people will actually read it.
+            Who knows? All I know is that it looks nice.
+          </p>
+        </div>
+        <div class="quote-author"><p>-Thor, God of Thunder</p></div>
+      </div>
+    </section>
+
+    <!-- CTA -->
+
+    <section id="cta" class="cta">
+      <div class="container cta-box">
+        <div class="container container-sm cta-content">
+          <div class="cta-description">
+            <h3>Call to action! It's time!</h3>
+            <p>
+              Sign up for our product by clicking that button right over there!
+            </p>
+          </div>
+          <div class="cta-btn">
+            <button class="btn btn-outline">Sign up</button>
+          </div>
         </div>
       </div>
     </section>
