completed footer and the whole project

--- a/index.html
+++ b/index.html
@@ -138,5 +138,11 @@
         </div>
       </div>
     </section>
+
+    <!-- Footer -->
+
+    <footer>
+      <h4>Copyright &copy; Pavelas Bulatovas 2024.</h4>
+    </footer>
   </body>
 </html>
